--- a/iproc-cloud/index.html
+++ b/iproc-cloud/index.html
@@ -535,16 +535,17 @@
                             class="bg-white col-span-12 sm:col-span-6 lg:col-span-4 h-full shadow rounded-xl p-8 border border-gray-200 flex flex-col hover:scale-105 transition">
                             <div class="flex flex-col justify-between price-head">
                                 <div class="flex flex-col">
-                                    <h3 class="text-gray-900 text-2xl font-bold text-center mb-5 mt-12">Cloud VMS</h3>
+                                    <h3 class="text-[#005db5] text-2xl font-semibold text-center mb-5 mt-12">Cloud VMS
+                                    </h3>
                                     <div class="mb-5">
-                                        <p class="text-4xl text-gray-900 font-bold text-center">6 Juta <span
+                                        <p class="text-4xl text-[#005db5] font-bold text-center">6 Juta <span
                                                 class="text-base font-normal text-gray-500">/ Bulan</span></p>
                                         <p class="text-[#005DB5] font-medium text-center mt-4"><span
                                                 class="font-bold">10
                                                 juta</span> di awal untuk biaya setup aplikasi</p>
-                                        <p class="text-center mt-4 text-gray-500">
-                                            Setup & pelatihan hanya 1 hari <br>
-                                            2 user | Unlimited vendor
+                                        <p class="text-center mt-4 text-gray-900">
+                                            Setup & implementasi dalam <strong>1 hari</strong> <br>
+                                            2 User | Unlimited vendor
                                         </p>
                                     </div>
                                 </div>
@@ -553,7 +554,7 @@
                                     Pilih Paket</span>
                                 </button>
                             </div>
-                            <h4 class="text-gray-900 text-base font-bold mb-3 flex items-center gap-2">
+                            <h4 class="text-gray-900 text-base font-bold mb-3 mt-8 flex items-center gap-2">
                                 <span>
                                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17"
                                         fill="none">
@@ -564,7 +565,7 @@
                                 </span>
                                 <span>Untuk siapa:</span>
                             </h4>
-                            <ul class="text-gray-900 text-sm sm:text-base space-y-4">
+                            <ul class="text-gray-900 text-sm sm:text-base space-y-4 for-list">
                                 <li class="flex items-start gap-3">
                                     <svg class="flex-shrink-0 mt-1" xmlns="http://www.w3.org/2000/svg" width="14"
                                         height="15" viewBox="0 0 14 15" fill="none">
@@ -593,7 +594,7 @@
                                     <span>Tidak butuh proses tender digital</span>
                                 </li>
                             </ul>
-                            <h4 class="text-gray-900 text-md font-bold mb-3 mt-8 flex items-center gap-2">
+                            <h4 class="text-gray-900 text-md font-bold mb-3 mt-10 flex items-center gap-2">
                                 <span>
                                     <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17"
                                         fill="none">
@@ -724,7 +725,7 @@
                                     <span class="text-gray-400">Kastemisasi dan Integrasi</span>
                                 </li>
                             </ul>
-                            <h4 class="text-gray-900 text-md font-bold mb-3 mt-8 flex items-center gap-2">
+                            <h4 class="text-gray-900 text-md font-bold mb-3 mt-10 flex items-center gap-2">
                                 <span>
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="17" viewBox="0 0 16 17"
                                         fill="none">
@@ -775,18 +776,19 @@
                                         class="absolute top-0 right-1/2 translate-x-1/2 w-fit rounded-md bg-sky-200 text-[#005db5] font-medium px-3 py-1">
                                         Direkomendasikan
                                     </span>
-                                    <h3 class="text-gray-900 text-2xl font-bold text-center mb-5 mt-12">Cloud eBidding
+                                    <h3 class="text-[#005db5] text-2xl font-semibold text-center mb-5 mt-12">Cloud
+                                        eBidding
                                     </h3>
                                     <div class="mb-5">
-                                        <p class="text-4xl text-gray-900 font-bold text-center">11 Juta <span
+                                        <p class="text-4xl text-[#005db5] font-bold text-center">11 Juta <span
                                                 class="text-base font-normal text-gray-500">/ Bulan</span></p>
                                         <p class="text-[#005DB5] font-medium text-center mt-4"><span
                                                 class="font-bold">20
                                                 juta</span> di awal untuk biaya setup aplikasi</p>
-                                        <p class="text-center mt-4 text-gray-500">
-                                            Setup 5 hari <br>
-                                            10 user | Unlimited vendor | <br>
-                                            5 paket pengadaan/bulan
+                                        <p class="text-center mt-4 text-gray-900">
+                                            Setup & implementasi dalam <strong>5 hari</strong> <br>
+                                            10 User | Unlimited vendor | <br>
+                                            5 Paket Pengadaan
                                         </p>
                                     </div>
                                 </div>
@@ -795,7 +797,7 @@
                                     Pilih Paket</span>
                                 </button>
                             </div>
-                            <h4 class="text-gray-900 text-base font-bold mb-3 flex items-center gap-2">
+                            <h4 class="text-gray-900 text-base font-bold mb-3 mt-8 flex items-center gap-2">
                                 <span>
                                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17"
                                         fill="none">
@@ -806,7 +808,7 @@
                                 </span>
                                 <span>Untuk siapa:</span>
                             </h4>
-                            <ul class="text-gray-900 text-sm sm:text-base space-y-4">
+                            <ul class="text-gray-900 text-sm sm:text-base space-y-4 for-list">
                                 <li class="flex items-start gap-3">
                                     <svg class="flex-shrink-0 mt-1" xmlns="http://www.w3.org/2000/svg" width="14"
                                         height="15" viewBox="0 0 14 15" fill="none">
@@ -835,7 +837,7 @@
                                     <span>Butuh rekap data penawaran & evaluasi otomatis</span>
                                 </li>
                             </ul>
-                            <h4 class="text-gray-900 text-md font-bold mb-3 mt-8 flex items-center gap-2">
+                            <h4 class="text-gray-900 text-md font-bold mb-3 mt-10 flex items-center gap-2">
                                 <span>
                                     <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17"
                                         fill="none">
@@ -895,7 +897,7 @@
                                     <span>Vendor Performance & Evaluation</span>
                                 </li>
                                 <li class="flex items-start gap-3">
-                                   <svg class="flex-shrink-0 mt-1" xmlns="http://www.w3.org/2000/svg" width="14"
+                                    <svg class="flex-shrink-0 mt-1" xmlns="http://www.w3.org/2000/svg" width="14"
                                         height="15" viewBox="0 0 14 15" fill="none">
                                         <path
                                             d="M5.00878 13.2628C4.7803 13.2639 4.56052 13.1566 4.39647 12.9638L0.264208 8.10324C0.181845 8.00577 0.116126 7.88958 0.0708037 7.76132C0.0254817 7.63307 0.00144401 7.49524 6.31568e-05 7.35572C-0.00272561 7.07395 0.086941 6.80237 0.249337 6.60074C0.411734 6.3991 0.633557 6.28393 0.866009 6.28055C1.09846 6.27717 1.3225 6.38586 1.48884 6.58271L5.01228 10.7255L12.5105 1.89813C12.6771 1.70128 12.9014 1.5927 13.134 1.59628C13.3666 1.59986 13.5885 1.7153 13.7509 1.91722C13.9133 2.11913 14.0029 2.39098 13.9999 2.67295C13.997 2.95492 13.9017 3.22393 13.7352 3.42078L5.6211 12.9638C5.45705 13.1566 5.23727 13.2639 5.00878 13.2628Z"
@@ -942,7 +944,7 @@
                                     <span class="text-gray-400">Kastemisasi dan Integrasi</span>
                                 </li>
                             </ul>
-                            <h4 class="text-gray-900 text-md font-bold mb-3 mt-8 flex items-center gap-2">
+                            <h4 class="text-gray-900 text-md font-bold mb-3 mt-10 flex items-center gap-2">
                                 <span>
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="17" viewBox="0 0 16 17"
                                         fill="none">
@@ -989,17 +991,18 @@
                             class="bg-white  col-span-12 sm:col-start-4 lg:col-start-9 sm:col-span-6 lg:col-span-4 h-full shadow rounded-xl p-8 border border-gray-200 flex flex-col hover:scale-105 transition">
                             <div class="flex flex-col justify-between price-head">
                                 <div class="flex flex-col">
-                                    <h3 class="text-gray-900 text-2xl font-bold text-center mb-5 mt-12">Private Cloud
+                                    <h3 class="text-[#005db5] text-2xl font-semibold text-center mb-5 mt-12">Private
+                                        Cloud
                                     </h3>
                                     <div class="mb-5">
-                                        <p class="text-4xl text-gray-900 font-bold text-center">Hubungi Kami</p>
+                                        <p class="text-4xl text-[#005db5] font-bold text-center">Hubungi Kami</p>
                                         <p class="text-[#005DB5] font-medium text-center mt-4">Hubungi kami untuk
                                             konsultasi
                                             biaya.
                                         </p>
-                                        <p class="text-center mt-4 text-gray-500">
-                                            Setup & SLA mengikuti scope <br>
-                                            Jumlah user & paket pengadaan dapat disesuaikan
+                                        <p class="text-center mt-4 text-gray-900">
+                                            Setup & Implementasi <strong>dapat disesuaikan</strong> <br>
+                                            User & Paket pengadaan <strong>dapat disesuaikan</strong>
                                         </p>
                                     </div>
                                 </div>
@@ -1008,7 +1011,7 @@
                                     Kami</span>
                                 </a>
                             </div>
-                            <h4 class="text-gray-900 text-base font-bold mb-3 flex items-center gap-2">
+                            <h4 class="text-gray-900 text-base font-bold mb-3 mt-8 flex items-center gap-2">
                                 <span>
                                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17"
                                         fill="none">
@@ -1019,7 +1022,7 @@
                                 </span>
                                 <span>Untuk siapa:</span>
                             </h4>
-                            <ul class="text-gray-900 text-sm sm:text-base space-y-4">
+                            <ul class="text-gray-900 text-sm sm:text-base space-y-4 for-list">
                                 <li class="flex items-start gap-3">
                                     <svg class="flex-shrink-0 mt-1" xmlns="http://www.w3.org/2000/svg" width="14"
                                         height="15" viewBox="0 0 14 15" fill="none">
@@ -1048,7 +1051,7 @@
                                     <span>Mengutamakan keamanan data & SLA tinggi</span>
                                 </li>
                             </ul>
-                            <h4 class="text-gray-900 text-md font-bold mb-3 mt-8 flex items-center gap-2">
+                            <h4 class="text-gray-900 text-md font-bold mb-3 mt-10 flex items-center gap-2">
                                 <span>
                                     <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17"
                                         fill="none">
@@ -1108,7 +1111,7 @@
                                     <span>Vendor Performance & Evaluation</span>
                                 </li>
                                 <li class="flex items-start gap-3">
-                                   <svg class="flex-shrink-0 mt-1" xmlns="http://www.w3.org/2000/svg" width="14"
+                                    <svg class="flex-shrink-0 mt-1" xmlns="http://www.w3.org/2000/svg" width="14"
                                         height="15" viewBox="0 0 14 15" fill="none">
                                         <path
                                             d="M5.00878 13.2628C4.7803 13.2639 4.56052 13.1566 4.39647 12.9638L0.264208 8.10324C0.181845 8.00577 0.116126 7.88958 0.0708037 7.76132C0.0254817 7.63307 0.00144401 7.49524 6.31568e-05 7.35572C-0.00272561 7.07395 0.086941 6.80237 0.249337 6.60074C0.411734 6.3991 0.633557 6.28393 0.866009 6.28055C1.09846 6.27717 1.3225 6.38586 1.48884 6.58271L5.01228 10.7255L12.5105 1.89813C12.6771 1.70128 12.9014 1.5927 13.134 1.59628C13.3666 1.59986 13.5885 1.7153 13.7509 1.91722C13.9133 2.11913 14.0029 2.39098 13.9999 2.67295C13.997 2.95492 13.9017 3.22393 13.7352 3.42078L5.6211 12.9638C5.45705 13.1566 5.23727 13.2639 5.00878 13.2628Z"
@@ -1147,7 +1150,7 @@
                                     <span>Kastemisasi dan Integrasi</span>
                                 </li>
                             </ul>
-                            <h4 class="text-gray-900 text-md font-bold mb-3 mt-8 flex items-center gap-2">
+                            <h4 class="text-gray-900 text-md font-bold mb-3 mt-10 flex items-center gap-2">
                                 <span>
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="17" viewBox="0 0 16 17"
                                         fill="none">
@@ -1332,35 +1335,41 @@
     </script>
 
     <script>
-        function equalizePriceHeadHeight() {
-            const heads = document.querySelectorAll('.price-head');
+        function equalizeElementHeights(className) {
+            const elements = document.querySelectorAll(`.${className}`);
             let maxHeight = 0;
 
             // Reset height terlebih dahulu
-            heads.forEach(el => {
+            elements.forEach(el => {
                 el.style.height = 'auto';
             });
 
             // Hitung tinggi maksimal
-            heads.forEach(el => {
+            elements.forEach(el => {
                 maxHeight = Math.max(maxHeight, el.offsetHeight);
             });
 
             // Terapkan tinggi maksimal ke semua elemen
-            heads.forEach(el => {
+            elements.forEach(el => {
                 el.style.height = maxHeight + 'px';
             });
         }
 
-        // Panggil saat halaman selesai dimuat
-        window.addEventListener('load', equalizePriceHeadHeight);
-
-        // Panggil setiap kali ukuran layar berubah
-        window.addEventListener('resize', () => {
-            // Tambahkan debounce agar performa tetap bagus saat resize cepat
-            clearTimeout(window.__resizeTimeout);
-            window.__resizeTimeout = setTimeout(equalizePriceHeadHeight, 100);
+        // Contoh penggunaan saat halaman dimuat
+        window.addEventListener('load', () => {
+            equalizeElementHeights('price-head');
+            equalizeElementHeights('for-list'); // contoh class lain
         });
+
+        // Tambahkan debounce saat resize
+        window.addEventListener('resize', () => {
+            clearTimeout(window.__resizeTimeout);
+            window.__resizeTimeout = setTimeout(() => {
+                equalizeElementHeights('price-head');
+                equalizeElementHeights('for-list'); // contoh class lain
+            }, 100);
+        });
+
     </script>
 
 </body>
