--- a/iproc-cloud/index.html
+++ b/iproc-cloud/index.html
@@ -535,7 +535,7 @@
                             class="bg-white col-span-12 sm:col-span-6 lg:col-span-4 h-full shadow rounded-xl p-8 border border-gray-200 flex flex-col hover:scale-105 transition">
                             <div class="flex flex-col justify-between price-head">
                                 <div class="flex flex-col">
-                                    <h3 class="text-[#005db5] text-2xl font-semibold text-center mb-5 mt-12">Cloud VMS
+                                    <h3 class="text-900 text-2xl font-semibold text-center mb-5 mt-12">Cloud VMS
                                     </h3>
                                     <div class="mb-5">
                                         <p class="text-4xl text-[#005db5] font-bold text-center">6 Juta <span
@@ -776,7 +776,7 @@
                                         class="absolute top-0 right-1/2 translate-x-1/2 w-fit rounded-md bg-sky-200 text-[#005db5] font-medium px-3 py-1">
                                         Direkomendasikan
                                     </span>
-                                    <h3 class="text-[#005db5] text-2xl font-semibold text-center mb-5 mt-12">Cloud
+                                    <h3 class="text-900 text-2xl font-semibold text-center mb-5 mt-12">Cloud
                                         eBidding
                                     </h3>
                                     <div class="mb-5">
@@ -991,7 +991,7 @@
                             class="bg-white  col-span-12 sm:col-start-4 lg:col-start-9 sm:col-span-6 lg:col-span-4 h-full shadow rounded-xl p-8 border border-gray-200 flex flex-col hover:scale-105 transition">
                             <div class="flex flex-col justify-between price-head">
                                 <div class="flex flex-col">
-                                    <h3 class="text-[#005db5] text-2xl font-semibold text-center mb-5 mt-12">Private
+                                    <h3 class="text-900 text-2xl font-semibold text-center mb-5 mt-12">Private
                                         Cloud
                                     </h3>
                                     <div class="mb-5">
