--- a/index.html
+++ b/index.html
@@ -1932,7 +1932,7 @@
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js" defer async></script>
     <script src="lib/js/slider.min.js" defer async></script>
-    <script src="lib/js/navbar.min.js" defer async></script>
+    <script src="lib/js/navbar.js" defer async></script>
     <script src="lib/js/index.min.js" defer> async</script>
     <script src="lib/js/tabs.min.js" defer async></script>
     <script src="lib/js/flowbite.min.js"></script>
