--- a/iproc-cloud/index.html
+++ b/iproc-cloud/index.html
@@ -538,10 +538,10 @@
                     Perbedaan iProc VMS, iProc e-Bidding dan iProc Private Cloud
                 </h2>
 
-                <div class="w-full">
-                    <div class="grid grid-cols-12 gap-y-8 gap-x-0 sm:gap-x-8">
+                <div class="w-full overflow-auto">
+                    <div class="min-w-[1000px] grid grid-cols-12 gap-x-6 sm:gap-x-8">
                         <div
-                            class="bg-white col-span-12 sm:col-span-6 lg:col-span-4 h-full shadow rounded-xl p-8 border border-gray-200 flex flex-col hover:scale-105 transition">
+                            class="bg-white col-span-4 h-full shadow rounded-xl p-8 border border-gray-200 flex flex-col hover:scale-105 transition">
                             <div class="flex flex-col justify-between price-head">
                                 <div class="flex flex-col">
                                     <h3 class="text-900 text-lg xl:text-2xl font-semibold text-center mb-5 mt-12">Cloud VMS
@@ -778,7 +778,7 @@
                             </ul>
                         </div>
                         <div
-                            class="bg-gradient-to-b from-sky-500/25 to-30% to-white col-span-12 sm:col-span-6 lg:col-span-4 h-full shadow rounded-xl p-8 border-3 border-[#005db5]/50 flex flex-col hover:scale-105 transition">
+                            class="bg-gradient-to-b from-sky-500/25 to-30% to-white col-span-4 h-full shadow rounded-xl p-8 border-3 border-[#005db5]/50 flex flex-col hover:scale-105 transition">
                             <div class="flex flex-col justify-between price-head">
                                 <div class="flex flex-col relative">
                                     <span
@@ -997,7 +997,7 @@
                             </ul>
                         </div>
                         <div
-                            class="bg-white  col-span-12 sm:col-start-4 lg:col-start-9 sm:col-span-6 lg:col-span-4 h-full shadow rounded-xl p-8 border border-gray-200 flex flex-col hover:scale-105 transition">
+                            class="bg-white col-span-4 h-full shadow rounded-xl p-8 border border-gray-200 flex flex-col hover:scale-105 transition">
                             <div class="flex flex-col justify-between price-head">
                                 <div class="flex flex-col">
                                     <h3 class="text-900 text-lg xl:text-2xl font-semibold text-center mb-5 mt-12">Private
