--- a/iproc-cloud/index.html
+++ b/iproc-cloud/index.html
@@ -538,8 +538,8 @@
                     Perbedaan iProc VMS, iProc e-Bidding dan iProc Private Cloud
                 </h2>
 
-                <div class="w-full overflow-auto">
-                    <div class="min-w-[1100px] grid grid-cols-12 gap-x-6 sm:gap-x-8">
+                <div class="-mx-8 xl:-mx-0 overflow-auto">
+                    <div class="min-w-[1279px] px-8 xl:px-0 xl:min-w-auto grid grid-cols-12 gap-x-6 sm:gap-x-8">
                         <div
                             class="bg-white col-span-4 h-full shadow rounded-xl p-8 border border-gray-200 flex flex-col hover:scale-105 transition">
                             <div class="flex flex-col justify-between price-head">
