--- a/iproc-cloud/index.html
+++ b/iproc-cloud/index.html
@@ -539,7 +539,7 @@
                 </h2>
 
                 <div class="-mx-8 xl:-mx-0 overflow-auto">
-                    <div class="min-w-[1279px] px-8 xl:px-0 xl:min-w-auto grid grid-cols-12 gap-x-6 sm:gap-x-8">
+                    <div class="min-w-[1080px] lg:min-w-[1279px] xl:min-w-auto px-8 xl:px-0  grid grid-cols-12 gap-x-6 sm:gap-x-8">
                         <div
                             class="bg-white col-span-4 h-full shadow rounded-xl p-8 border border-gray-200 flex flex-col hover:scale-105 transition">
                             <div class="flex flex-col justify-between price-head">
@@ -1206,7 +1206,7 @@
                 </div>
             </div>
         </section>
-        <section id="contact" class="bottom px-8 md:px-14 relative overflow-hidden mb-20">
+        <section id="contact" class="bottom px-8 xl:px-14 relative overflow-hidden mb-20">
             <div class="max-w-screen-2xl mx-auto text-center p-10 sm:p-15 rounded-4xl">
                 <p
                     class="text-xl md:text-2xl! lg:text-5xl! font-extrabold mx-auto text-white leading-tight mb-8 w-full sm:max-w-2/3">
